@@ -13,7 +13,7 @@ package org.tn5250j.gui;
 =====================================================================
 */
 
-import javax.swing.table.*;
+import javax.swing.table.TableModel;
 
 public interface SortTableModel extends TableModel {
    public boolean isSortable(int col);
