@@ -26,6 +26,9 @@ default that I set up.  This is for JVM supplied by IBM.
 Enhancements/Change Log
 -----------------------
 
+05/12/2009  Added: Sessions table, sorting by session name ignoring case
+            Added: Sessions table, sorting by host/ip is possible
+
 21/11/2009  Added: screen export: concat a '.txt' to the exported file name, if no extension was given
             Added: screen export: set the file filter '*.txt' as default
 
